Fixing options display problem on high res small screens on firefox
options inside select elements on firefox weren't displaying properly, it should be fixed now.

--- a/style.scss
+++ b/style.scss
@@ -182,7 +182,7 @@ body {
       select {
         font-size: 2em;
         option {
-          font-size: 0.5em;
+          font-size: 100%;
         }
       }
     }
